[package]
name = "mocra-core"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "The mocra crawler framework runtime: errors, cache, utilities, domain models, downloader, data-plane queue, coordination, scheduler and engine."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ouiex/mocra"
homepage = "https://github.com/ouiex/mocra"
documentation = "https://docs.rs/mocra-core"
readme = "README.md"
keywords = ["crawler", "scraping", "framework", "async"]
categories = ["network-programming", "web-programming", "asynchronous"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
mocra-proxy = { path = "../mocra-proxy", version = "0.4.0" }
mocra-dag = { path = "../mocra-dag", version = "0.4.0" }
mocra-store = { path = "../mocra-store", version = "0.4.0", optional = true }
polars = { version = "0.52.0", features = ["json", "lazy", "serde", "csv", "timezones", "strings", "ipc", "dtype-decimal"], optional = true }
# cacheable (cache service: local in-memory backend)
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
dashmap = "6"
zstd = "0.13"
flate2 = "1.1.9"
metrics = "0.24"
# utils (rate limiting / locks / coordination / logging / connectors / encoding, etc.)
chrono = { version = "0.4.43", features = ["serde"] }
once_cell = "1"
regex = "1"
md5 = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["http2", "charset", "native-tls", "brotli", "form", "cookies", "json", "socks", "gzip", "deflate", "zstd", "hickory-dns", "stream"] }
uuid = { version = "1", features = ["serde", "v7", "zerocopy", "v4"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json"] }
tracing-log = "0.2"
# common (domain models / interfaces / state / config / processor chain, etc.)
cron = "0.15"
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
reqwest_cookie_store = { version = "0.10", features = ["serde"] }
url = "2"
toml = "0.9"
# downloader (HTTP / WebSocket downloaders)
futures-util = "0.3"
rand = "0.9.2"
semver = { version = "1", features = ["serde"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
dyn-clone = "1"
# queue (data-plane MQ: in-memory by default; kafka / nats are optional, gated by features)
rmp-serde = "1.3"
serde_path_to_error = "0.1"
crc32fast = "1.5.0"
rdkafka = { version = "0.39", features = ["cmake-build"], optional = true }
async-nats = { version = "0.38", optional = true }
# sync (coordination integration: embedded Raft backend)
mocra-cluster = { path = "../mocra-cluster", version = "0.4.0", optional = true }
# engine (collection pipeline / processor / scheduling / monitoring); axum is only used by the
# dashboard's observability HTTP API, so it is gated.
axum = { version = "0.8", features = ["json"], optional = true }
bloomfilter = "3"
metrics-exporter-prometheus = "0.18"
sysinfo = "0.38"
tower-http = { version = "0.6", features = ["cors"], optional = true }
# store (sea-orm connector / transactions) — off by default
sea-orm = { version = "1", features = ["postgres-array", "runtime-tokio-native-tls", "sqlx-postgres", "sqlx-sqlite"], optional = true }
# excel (calamine → DataFrame) — off by default, implies polars
calamine = { version = "0.33.0", features = ["chrono", "dates"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[features]
# Data-frame support: adds the `From<PolarsError>` boundary on the core error type + polars_utils.
polars = ["dep:polars"]
# sea-orm connector / transaction helpers + multi-tenant entity re-export.
store = ["dep:sea-orm", "dep:mocra-store"]
# Excel parsing (calamine → DataFrame); implies polars.
excel = ["dep:calamine", "polars"]
# Observability dashboard: admin/observability HTTP API (tower-http CORS) + log ring buffer.
dashboard = ["dep:tower-http", "dep:axum"]
# Data-plane MQ backends (default is in-memory).
queue-kafka = ["dep:rdkafka"]
queue-nats = ["dep:async-nats"]
# Embedded redb + Raft control plane (RaftCoordinationBackend).
cluster-embedded = ["dep:mocra-cluster"]
