[package]
name = "mocra-dag"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Generic distributed DAG execution engine for the mocra crawler framework (zero crawler coupling)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ouiex/mocra"
homepage = "https://github.com/ouiex/mocra"
documentation = "https://docs.rs/mocra-dag"
readme = "README.md"
keywords = ["dag", "scheduler", "distributed", "workflow", "concurrency"]
categories = ["asynchronous", "concurrency"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
futures = "0.3"
dashmap = "6"
uuid = { version = "1", features = ["serde", "v7", "v4"] }
deadpool-redis = { version = "0.22", features = ["json", "script"] }
redis = { version = "0.32", features = ["tokio-comp"] }
metrics = "0.24"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
